--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 title: Home
 layout: default
+description: AEHCA Inc. works to advance education and healthy living conditions throughout Central America.
+Forming partnerships with communities to build on their specific needs and existing resources. COVID-19 releif has been
+a
+specific focus during 2020 and 2021.
 ---
 <main role="main">
   <div class="container-md">
