--- a/updates.html
+++ b/updates.html
@@ -1,6 +1,7 @@
 ---
 title: Updates
 layout: default
+description: View our most recent updates from our AECHA Inc. Facebook page.
 ---
 
 <main role="main">
