--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 title: Contact
 layout: default
+description: Reach out to our CEO and team on this page.
 ---
 <main role="main">
   <div class="container-md">
