small bug with description

--- a/give.html
+++ b/give.html
@@ -1,8 +1,8 @@
 ---
 title: Give
 layout: default
-description: To support our non-profit organization, please donate using the links on this page.
-For easy service and to set up recurring payments, use our PayPal link.
+description: "To support our non-profit organization, please donate using the links on this page.
+For easy service and to set up recurring payments, use our PayPal link."
 ---
 <main role="main">
   <div class="container-md">
