--- a/partnerships.html
+++ b/partnerships.html
@@ -1,10 +1,10 @@
 ---
 title: Partnerships
 layout: default
-description: Our Partnerships are categorized by the country name from which they are a part of.
+description: "Our Partnerships are categorized by the country name from which they are a part of.
 There are seven countries in Central America. So we plan on establishing partnerships in all of them.
 Each of the villages, cities, municipalities that we form partnerships with will be listed under the
-link for that country. As the seeds are planted and begin to grow, you will see that growth on this page.
+link for that country. As the seeds are planted and begin to grow, you will see that growth on this page."
 ---
 <main role="main">
   <div class="container-md">
