--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -72,6 +72,7 @@ author: billy
                                             <li data-target="#educationCarousel" data-slide-to="3"></li>
                                             <li data-target="#educationCarousel" data-slide-to="4"></li>
                                             <li data-target="#educationCarousel" data-slide-to="5"></li>
+                                            <li data-target="#educationCarousel" data-slide-to="6"></li>
                                         </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
@@ -111,6 +112,15 @@ author: billy
                                                     </p>
                                                 </div>
                                             </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/scholarship-student-1.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">One of our scholarship students
+                                                    </p>
+                                                </div>
+                                            </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#educationCarousel" role="button"
                                             data-slide="prev">
@@ -124,6 +134,7 @@ author: billy
                                         </a>
                                     </div>
                                 </div>
+                                <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                             </div>
                         </div>
                         <hr class="my-4">
