--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -113,11 +113,11 @@ author: billy
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="/images/scholarship-student-1.jpg"
+                                                <img src="/images/scholarship-student-1-m.jpg"
                                                     class="d-block w-100 rounded"
                                                     alt="Education - technology - Ipala, Guatemala">
                                                 <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">One of our scholarship students
+                                                    <p class="text-light bg-dark">SMALL One of our scholarship students
                                                     </p>
                                                 </div>
                                             </div>
