--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -54,6 +54,89 @@ author: billy
                                     donors to support our powerful Advanced Scholarship program as an entirety.
                                     This you can do by making a monthly donation of an amount that you can sustain
                                     over the year. </p>
+                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                                <div class="col">
+                                    <div id="scholarshipCarousel" class="carousel slide" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#scholarshipCarousel" data-slide-to="0" class="active">
+                                            </li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="1"></li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="2"></li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="3"></li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="4"></li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="5"></li>
+                                            <li data-target="#scholarshipCarousel" data-slide-to="6"></li>
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="/images/vernon-with-students-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship students with
+                                                        Vernon
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item active">
+                                                <img src="/images/scholarship-student-1-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship Student 1
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/scholarship-student-2-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship Student 2
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/scholarship-student-3-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship Student 3
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/scholarship-student-4-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship Student 4
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/scholarship-student-5-s.jpg"
+                                                    class="d-block w-100 rounded"
+                                                    alt="Education - technology - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">University Scholarship Student 5
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#scholarshipCarousel" role="button"
+                                            data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#scholarshipCarousel" role="button"
+                                            data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                                 <h4 class="mt-0">How does our Community Learning Program work?</h4>
                                 <p>This program works to alleviate the educational needs of the community as a whole.
                                     It seeks out partnerships with the local schools to improve delivery of quality
