--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -32,6 +32,63 @@ author: billy
                                 <p>From all of us at AEHCA Inc., our partners in Ipala, and on behalf
                                     of all of our students and their families, we appreciate your
                                     support! </p>
+                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                                <div class="col">
+                                    <div id="elAmatilloCarousel" class="carousel slide" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="0" class="active"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="1"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="2"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="3"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="4"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="5"></li>
+                                            <li data-target="#elAmatilloCarousel" data-slide-to="6"></li>
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="/images/el-amatillo-1.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - el amatillo - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">New desks for El Amatillo</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/el-amatillo-2.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - cidher and vernon el amatillo - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">C.I.D.H.E.R members with Vernon at El
+                                                        Amatillo</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/el-amatillo-3.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - Teachers for El Amatillo - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">El Amatillo Teachers and Vernon</p>
+                                                </div>
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="/images/el-amatillo-4.jpg" class="d-block w-100 rounded"
+                                                    alt="Education - broken desks - Ipala, Guatemala">
+                                                <div class="carousel-caption d-none d-md-block">
+                                                    <p class="text-light bg-dark">What the new desks are replacing at El
+                                                        Amatillo</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#elAmatilloCarousel" role="button"
+                                            data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#elAmatilloCarousel" role="button"
+                                            data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                                 <h4 class="mt-0">How does our Scholarship Program work?</h4>
                                 <p>Our Scholarship Program pools together funds from generous
                                     people like you to deliver support to needy students in the
