change youtube link

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@ specific focus during 2020 and 2021."
             <!-- Button group for triggering modal -->
             <div class="btn-group-vertical">
               <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="https://www.youtube.com/embed/xl7ax4XDKV8" data-bs-target="#videoModal">
+                data-tagVideo="https://www.youtube.com/embed/KC6ZNNpdYnw" data-bs-target="#videoModal">
                 Covid-19 Relief
               </button>
               <br>
               <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="https://www.youtube.com/embed/oLMYa4moo54" data-bs-target="#videoModal">
+                data-tagVideo="https://www.youtube.com/embed/GJXJMImwoek" data-bs-target="#videoModal">
                 Scholarships
               </button>
               <br>
               <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="https://www.youtube.com/embed/pCcFxBUJse8" data-bs-target="#videoModal">
+                data-tagVideo="https://www.youtube.com/embed/lWdS_sJXKkk" data-bs-target="#videoModal">
                 IDEC Building
               </button>
             </div>
