update history card

--- a/about.html
+++ b/about.html
@@ -60,12 +60,19 @@ layout: default
                   <div class="col-sm-7">
                     <div class="card-body">
                       <h5 class="card-title">History</h5>
-                      <p class="card-text">Our history is brief as we have currently just incorporated.
-                        However, our CEO has traveled with the Cedar Ridge Community Church to Ipala Guatemala.
-                        They have planted a seed of friendship. Developing relationships with the people there.
-                        It is the intent of this Association to build on that example and help spread
-                        relationships throughout the region through education and healthy living conditions
-                        to the people.</p>
+                      <p class="card-text">Our CEO traveled with the Cedar Ridge Community Church to Ipala Guatemala in
+                        2018 for the first time. He was stunned to see the living conditions that the people there were
+                        living in. His heart ached for what he saw and he talked with the leadership of CRCC about it on
+                        his return trip in 2019. From these two visits AEHCA was formed.
+
+                        In March 2020, AEHCA was approved as a 501(c)(3) Non-Profit Organization. In our first year, we
+                        worked closely with CRCC as a partner in their activities. We had our first fundraiser December
+                        2, 2020 on Giving Tuesday. And then there came a pandemic.
+
+                        In 2021, AEHCA established an advanced scholarship program. Initially providing 5 students a
+                        Scholarship to attend college. We provided Food three times to those suffering because of the
+                        Covid-19 pandemic, and we purchased desks for one school so that their students didn’t have to
+                        sit on the floor.</p>
                     </div>
                   </div>
                 </div>
