spacing in history

--- a/about.html
+++ b/about.html
@@ -63,11 +63,11 @@ layout: default
                       <p class="card-text">Our CEO traveled with the Cedar Ridge Community Church to Ipala Guatemala in
                         2018 for the first time. He was stunned to see the living conditions that the people there were
                         living in. His heart ached for what he saw and he talked with the leadership of CRCC about it on
-                        his return trip in 2019. From these two visits AEHCA was formed.
+                        his return trip in 2019. From these two visits AEHCA was formed.<br>
 
                         In March 2020, AEHCA was approved as a 501(c)(3) Non-Profit Organization. In our first year, we
                         worked closely with CRCC as a partner in their activities. We had our first fundraiser December
-                        2, 2020 on Giving Tuesday. And then there came a pandemic.
+                        2, 2020 on Giving Tuesday. And then there came a pandemic.<br>
 
                         In 2021, AEHCA established an advanced scholarship program. Initially providing 5 students a
                         Scholarship to attend college. We provided Food three times to those suffering because of the
