--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ specific focus during 2020 and 2021."
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div class="display-4">
-              <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo">
+              <!-- <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo"> -->
+              <video autoplay loop muted playsinline>  
+                <source src="/images/aehca_cover.webm" type="video/webm">  
+                <source src="/images/aehca_cover.mp4" type="video/mp4">  
+              </video>  
             </div>
           </div>
           <div class="col-md-auto">
