--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ specific focus during 2020 and 2021."
           <div class="col-md-8">
             <div class="display-4">
               <!-- <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo"> -->
-              <video autoplay loop muted playsinline>  
+              <video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
                 <source src="/images/aehca_cover.webm" type="video/webm">  
                 <source src="/images/aehca_cover.mp4" type="video/mp4">  
               </video>  
