changing back to gif, size prob doesnt matter at our scale
will leave ability to easily change in the code

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ specific focus during 2020 and 2021."
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div class="display-4">
-              <!-- <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo"> -->
-              <video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
+              <!-- decide on whether to use a gif or video format. video format saves ~75-90% in kb. needed? -->
+              <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo"> 
+              <!--<video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
                 <source src="/images/aehca_cover.webm" type="video/webm">  
                 <source src="/images/aehca_cover.mp4" type="video/mp4">  
-              </video>  
+              </video>  -->
             </div>
           </div>
           <div class="col-md-auto">
