should fix ios issue?

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ specific focus during 2020 and 2021."
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <video class="col" controls muted autoplay>
+          <video class="col" controls muted autoplay playsinline>
             <source src="" type="video/mp4">
           </video>
         </div>
