changed where payeezy gets linked to

--- a/give.html
+++ b/give.html
@@ -55,7 +55,7 @@ For easy service and to set up recurring payments, use our PayPal link."
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Keep me here</button>
                         <!-- COMMENT THIS OUT WHILE THIS IS NOT THE OFFICIAL SITE -->
-                        <form action="https://checkout.globalgatewaye4.firstdata.com/pay" id="pay_now_form_12edcdebac"
+                        <form action="https://checkout.globalgatewaye4.firstdata.com/payment" id="pay_now_form_12edcdebac"
                           method="post">
                           <input type="hidden" name="x_login" value="WSP-AEHCA-OsnC5wC@vw" />
                           <input type="hidden" name="x_show_form" value="PAYMENT_FORM" />
