added recurring field - testing

--- a/give.html
+++ b/give.html
@@ -59,6 +59,7 @@ For easy service and to set up recurring payments, use our PayPal link."
                           method="post">
                           <input type="hidden" name="x_login" value="WSP-AEHCA-OsnC5wC@vw" />
                           <input type="hidden" name="x_show_form" value="PAYMENT_FORM" />
+                          <input type="hidden" name="x_recurring_billing" value="TRUE" />
                           <input type="hidden" name="x_fp_sequence" value="15609677942141422411" />
                           <input type="hidden" name="x_fp_hash"
                             value="PNB-1.0-2600e1c00fe14d76165207561dfd3ca345c13b7d" />
