--- a/give.html
+++ b/give.html
@@ -61,6 +61,7 @@ For easy service and to set up recurring payments, use our PayPal link."
                           <input type="hidden" name="x_show_form" value="PAYMENT_FORM" />
                           <input type="hidden" name="x_recurring_billing" value="TRUE" />
                           <input type="hidden" name="x_fp_sequence" value="15609677942141422411" />
+                          <input type="hidden" name="Ecommerce_flag" value="2" />
                           <input type="hidden" name="x_fp_hash"
                             value="PNB-1.0-2600e1c00fe14d76165207561dfd3ca345c13b7d" />
                           <input type="hidden" name="x_amount" /><input type="hidden" name="x_currency_code"
