--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@ specific focus during 2020 and 2021."
           </svg>
           <div>
             It's almost the end of the year! Click
-
-            {% for post in site.posts %}
-            <!-- TODO: add in the correct post title for the new tax info -->
-            {% if post.title == "x" %}
-            <a href="{{ post.url }}">here</a>
-            {% endif %}
-            {% endfor %}
+            <a
+              href="https://blog.taxact.com/take-advantage-of-expanded-tax-deductions-for-charitable-donations-in-2021-email/">here</a>
             to learn about how donating can help during tax time.
           </div>
         </div>
