--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ specific focus during 2020 and 2021."
           </svg>
           <div>
             It's almost the end of the year! Click
-            <a
-              href="https://blog.taxact.com/take-advantage-of-expanded-tax-deductions-for-charitable-donations-in-2021-email/">here</a>
-            to learn about how donating can help during tax time.
+            <a href="https://blog.taxact.com/take-advantage-of-expanded-tax-deductions-for-charitable-donations-in-2021-email/"
+              target="_blank" rel="noopener noreferrer">here</a>
+            to learn about the expanded tax deductions for charitable donations in 2021.
           </div>
         </div>
         {% endif %}
