fixed formatting of text to go beside pic

--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -110,22 +110,28 @@ author: billy
                                 donors to support our powerful Advanced Scholarship program as an entirety.
                                 This you can do by making a monthly donation of an amount that you can sustain
                                 over the year. </p>
-                            <div class="col">
-                                <figure class="figure">
-                                    <img src="/images/vernon-with-students.jpg" class="figure-img img-fluid rounded"
-                                        alt="Vernon Archer with University scholarship students">
-                                    <figcaption class="figure-caption">University Scholarship recipients with Vernon
-                                    </figcaption>
-                                </figure>
+                            <div class="row">
+                                <div class="col">
+                                    <figure class="figure">
+                                        <img src="/images/vernon-with-students.jpg" class="figure-img img-fluid rounded"
+                                            alt="Vernon Archer with University scholarship students">
+                                        <figcaption class="figure-caption">University Scholarship recipients with Vernon
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="col">
+                                    <h4 class="mt-0">How does our Community Learning Program work?</h4>
+                                    <p>This program works to alleviate the educational needs of the community as a
+                                        whole.
+                                        It seeks out partnerships with the local schools to improve delivery of quality
+                                        education at all levels. With our key principles of collaboration and community
+                                        focus, our program serves the needs of the community starting from an early age,
+                                        providing access to education and strengthening their knowledge along the path.
+                                        Then continuing to fill the needs of students at an advanced level of education,
+                                        and adults who need computer skills or learning English.</p>
+                                </div>
                             </div>
-                            <h4 class="mt-0">How does our Community Learning Program work?</h4>
-                            <p>This program works to alleviate the educational needs of the community as a whole.
-                                It seeks out partnerships with the local schools to improve delivery of quality
-                                education at all levels. With our key principles of collaboration and community
-                                focus, our program serves the needs of the community starting from an early age,
-                                providing access to education and strengthening their knowledge along the path.
-                                Then continuing to fill the needs of students at an advanced level of education,
-                                and adults who need computer skills or learning English.</p>
+
                             <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                             <div class="col">
                                 <div id="educationCarousel" class="carousel slide" data-ride="carousel">
