spacing and added new months for the tax banner to show

--- a/index.html
+++ b/index.html
@@ -29,60 +29,60 @@ specific focus during 2020 and 2021."
       <div class="container">
         <!-- Can use this as a template for various informational alerts we want to give out.. maybe for new posts that dont need to be main content -->
         {% assign curMonth = site.time | date: "%m" %}
-        {% if curMonth >= "11" %} <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        {% if curMonth >= "11" or curMonth < "4" %} <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
           <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
             <path
               d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
           </symbol>
-        </svg>
-        <div class="alert alert-primary d-flex align-items-center" role="alert">
-          <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
-            <use xlink:href="#info-fill" />
           </svg>
-          <div>
-            It's almost the end of the year! Click
-            <a href="https://blog.taxact.com/take-advantage-of-expanded-tax-deductions-for-charitable-donations-in-2021-email/"
-              target="_blank" rel="noopener noreferrer">here</a>
-            to learn about the expanded tax deductions for charitable donations in 2021.
+          <div class="alert alert-primary d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+              <use xlink:href="#info-fill" />
+            </svg>
+            <div>
+              It's almost the end of the year! Click
+              <a href="https://blog.taxact.com/take-advantage-of-expanded-tax-deductions-for-charitable-donations-in-2021-email/"
+                target="_blank" rel="noopener noreferrer">here</a>
+              to learn about the expanded tax deductions for charitable donations in 2021.
+            </div>
           </div>
-        </div>
-        {% endif %}
-        <!-- End of informational alerts-->
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <div class="display-4">
-              <!-- decide on whether to use a gif or video format. video format saves ~75-90% in kb. needed? -->
-              <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo">
-              <!--<video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
+          {% endif %}
+          <!-- End of informational alerts-->
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <div class="display-4">
+                <!-- decide on whether to use a gif or video format. video format saves ~75-90% in kb. needed? -->
+                <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo">
+                <!--<video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
                 <source src="/images/aehca_cover.webm" type="video/webm">  
                 <source src="/images/aehca_cover.mp4" type="video/mp4">  
               </video>  -->
+              </div>
+            </div>
+            <div class="col-md-auto">
+              <div>
+                <h3>2022 Projects</h3>
+              </div>
+              <br>
+              <!-- Button group for triggering modal -->
+              <div class="btn-group-vertical">
+                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
+                  data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
+                  Scholarships
+                </button>
+                <br>
+                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
+                  data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
+                  IDEC Building
+                </button>
+                <br>
+                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
+                  data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
+                  Covid-19 Relief
+                </button>
+              </div>
             </div>
           </div>
-          <div class="col-md-auto">
-            <div>
-              <h3>2022 Projects</h3>
-            </div>
-            <br>
-            <!-- Button group for triggering modal -->
-            <div class="btn-group-vertical">
-              <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
-                Scholarships
-              </button>
-              <br>
-              <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
-                IDEC Building
-              </button>
-              <br>
-              <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
-                Covid-19 Relief
-              </button>
-            </div>
-          </div>
-        </div>
       </div>
       <hr class="my-4">
       <div class="container">
