fixed responsiveness.. look at margins between btn

--- a/index.html
+++ b/index.html
@@ -50,24 +50,22 @@ specific focus during 2020 and 2021."
           </div>
           {% endif %}
           <!-- End of informational alerts-->
-          <div class="row justify-content-center ">
-            <div class="card text-white container text-align-justify" style="background-color: #49b7e6">
+          <div class="row">
+            <div class="card text-white container " style="background-color: #49b7e6">
               <img src="/images/front-page.png" class="card-img rounded" alt="AEHCA Inc. logo">
-              <div class="card-img-overlay row align-items-end justify-content-md-center">
+              <div class="card-img-overlay row align-items-end justify-content-around">
                 <!-- Button group for triggering modal -->
-                <div class="btn-group ">
-                  <button type="button" id="fp_button" class="btn btn-lg btn-primary video-btn mx-5 rounded-pill"
+                <div class="btn-group flex-wrap">
+                  <button type="button" id="fp_button" class="btn btn-lg btn-primary video-btn rounded-pill"
                     data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
                     Scholarships
                   </button>
-                  <br>
-                  <button type="button" id="fp_button" class="btn btn-lg btn-warning video-btn mx-5 rounded-pill"
+                  <button type="button" id="fp_button" class="btn btn-lg btn-warning video-btn rounded-pill"
                     data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4"
                     data-bs-target="#videoModal">
                     School Building
                   </button>
-                  <br>
-                  <button type="button" id="fp_button" class="btn btn-lg btn-danger video-btn mx-5 rounded-pill"
+                  <button type="button" id="fp_button" class="btn btn-lg btn-danger video-btn rounded-pill"
                     data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4"
                     data-bs-target="#videoModal">
                     Emergency Food Relief
