--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ specific focus during 2020 and 2021."
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="videoModalLabel">Project info</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         <div class="modal-body">
           <video class="col" controls muted autoplay playsinline>
@@ -48,50 +50,68 @@ specific focus during 2020 and 2021."
           </div>
           {% endif %}
           <!-- End of informational alerts-->
-          <div class="row justify-content-center">
-            <div class="col-md-8">
-              <div class="display-4">
-                <!-- decide on whether to use a gif or video format. video format saves ~75-90% in kb. needed? -->
-                <img src="/images/aehca_cover.gif" class="img-fluid float-left rounded" alt="AEHCA Inc. logo">
-                <!--<video autoplay loop muted playsinline class="img-fluid float-left rounded" alt="AEHCA Inc. logo">  
-                <source src="/images/aehca_cover.webm" type="video/webm">  
-                <source src="/images/aehca_cover.mp4" type="video/mp4">  
-              </video>  -->
+          <div class="row">
+            <div class="card text-white container" style="background-color: #49b7e6">
+              <img src="/images/front-page.png" class="card-img rounded" alt="AEHCA Inc. logo">
+              <div class="card-img-overlay row align-items-end justify-content-around">
+                <!-- Button group for triggering modal -->
+                <!-- Buttons are on top of the image by defualt if screensize is greater than medium -->
+                <div class="btn-group flex-wrap d-none d-md-block">
+                  <button type="button" id="fp_button" class="btn btn-lg btn-primary video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
+                    Scholarships
+                  </button>
+                  <button type="button" id="fp_button" class="btn btn-lg btn-warning video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4"
+                    data-bs-target="#videoModal">
+                    School Building
+                  </button>
+                  <button type="button" id="fp_button" class="btn btn-lg btn-danger video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4"
+                    data-bs-target="#videoModal">
+                    Emergency Food Relief
+                  </button>
+                </div>
               </div>
             </div>
-            <div class="col-md-auto">
-              <div>
-                <h3>2022 Projects</h3>
+            <div class="card d-none d-md-block">
+              <div class="card-body rounded pt-3" style="background-color: #49b7e6">
+                AEHCA works to advance education and healthy living conditions throughout Central America.
+                Forming partnerships with communities to build on their specific needs and existing resources.
+                Our partners in Ipala, Guatemala have been working with us to identify projects that will
+                provide the most benefits for their community.
               </div>
-              <br>
-              <!-- Button group for triggering modal -->
-              <div class="btn-group-vertical">
-                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                  data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
-                  Scholarships
-                </button>
-                <br>
-                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                  data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
-                  IDEC Building
-                </button>
-                <br>
-                <button type="button" class="btn btn-primary video-btn" data-bs-toggle="modal"
-                  data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
-                  Covid-19 Relief
-                </button>
+            </div>
+            <!-- Moves the buttons below the image if the screensize is medium or smaller -->
+            <div class="card container d-md-none mt-1" style="background-color: #49b7e6">
+              <div class="card-body rounded align-items-end justify-content-around">
+                <div class="btn-group row flex-wrap text-center">
+                  <button type="button" id="fp_button" class="btn btn-primary video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
+                    Scholarships
+                  </button>
+                  <button type="button" id="fp_button" class="btn btn-warning video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4"
+                    data-bs-target="#videoModal">
+                    School Building
+                  </button>
+                  <button type="button" id="fp_button" class="btn btn-danger video-btn rounded-pill"
+                    data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4"
+                    data-bs-target="#videoModal">
+                    Emergency Food Relief
+                  </button>
+                  <p class="pt-3 text-left">AEHCA works to advance education and healthy living conditions throughout
+                    Central
+                    America.
+                    Forming partnerships with communities to build on their specific needs and existing resources.
+                    Our partners in Ipala, Guatemala have been working with us to identify projects that will
+                    provide the most benefits for their community.</p>
+                </div>
               </div>
             </div>
           </div>
       </div>
       <hr class="my-4">
-      <div class="container">
-        <p>AEHCA works to advance education and healthy living conditions throughout Central America.
-          Forming partnerships with communities to build on their specific needs and existing resources.
-          Our partners in Ipala, Guatemala have been working with us to identify projects that will
-          provide the most benefits for their community.
-        </p>
-      </div>
       <div class="card-group">
         <div class="card text-center">
           {% for post in site.posts %}
