added current events section.. contains links to socials and articles

--- a/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
+++ b/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
@@ -7,6 +7,16 @@ author: billy
 ---
 <main role="main">
     <div class="container-md">
+        <!-- BREADCRUMBS -->
+        <div class="breadcrumbs">
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a class="text-info" href="/">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/current.html">Current Events</a></li>
+                </ol>
+            </nav>
+        </div>
+        <!-- END BREADCRUMBS -->
         <div class="jumbotron">
             <p></p>
             <p class="lead text-center">Association for Education and Health in Central America</p>
@@ -131,7 +141,8 @@ author: billy
                             <p>&nbsp;&nbsp;&nbsp;Thanks,<br>
                                 &nbsp;&nbsp;&nbsp;Billy Earles<br>
                                 <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;AEHCA<br></small>
-                                <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small></p>
+                                <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small>
+                            </p>
                         </div>
                     </div>
                 </div>
