--- a/_posts/2020-03-20-letter-from-the-ceo.html
+++ b/_posts/2020-03-20-letter-from-the-ceo.html
@@ -7,6 +7,16 @@ author: billy
 ---
 <main role="main">
     <div class="container-md">
+        <!-- BREADCRUMBS -->
+        <div class="breadcrumbs">
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a class="text-info" href="/">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-info" href="/current.html">Current Events</a></li>
+                </ol>
+            </nav>
+        </div>
+        <!-- END BREADCRUMBS -->
         <div class="jumbotron">
             <p></p>
             <p class="lead text-center">Association for Education and Health in Central America</p>
@@ -80,7 +90,8 @@ author: billy
                         <p>Thanks,<br>
                             Billy Earles<br>
                             <small class="text-muted">AEHCA<br></small>
-                            <small class="text-muted">CEO<br></small></p>
+                            <small class="text-muted">CEO<br></small>
+                        </p>
                     </div>
                 </div>
             </div>
