--- a/thankyou.html
+++ b/thankyou.html
@@ -15,6 +15,7 @@ layout: 404
                 <div class="media-body">
                     <h6 class="mt-0">Association for Education and Health in Central America Team <small
                             class="text-muted">{{ site.time | date: '%B %d, %Y' }}</small></h6>
+                    <!-- ADD THE THANK YOU VIDEO HERE -->
                     We wanted to thank you for your generosity. Your gift is greatly appreciated!
                     Please feel free to click the button below to return back to our home page and take
                     a look at some of our programs.
