--- a/thankyou.html
+++ b/thankyou.html
@@ -6,11 +6,10 @@ layout: 404
     <div class="container">
         <div class="jumbotron">
             <p></p>
-            <p class="lead text-center">Association for Education and Health in Central America</p>
+            <p class="lead">Association for Education and Health in Central America</p>
             <hr class="my-4">
-            <div class="media">
-                <video autoplay loop muted playsinline class="img-fluid d-flex justify-content-center rounded"
-                    alt="AEHCA Inc. logo">
+            <div class="media justify-content-center">
+                <video autoplay loop muted playsinline class="img-fluid d-flex  rounded" alt="AEHCA Inc. logo">
                     <source src="/videos/thankyou.mp4" type="video/mp4">
                 </video>
             </div>
